--- a/app/dt2w/AndroidManifest.xml
+++ b/app/dt2w/AndroidManifest.xml
@@ -18,6 +18,6 @@
             </intent-filter>
         </receiver>
 
-        <service android:enabled="true" android:name=".DT2WServiceRMX2020" />
+        <service android:enabled="true" android:name=".DT2WServiceMT6768" />
     </application>
 </manifest>
